[package]
name = "dist_tx"
version = "0.3.0-unpublished"
authors = ["emabee <meinolf.block@sap.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust language bindings for XA Distributed Transactions"
keywords = ["distributed", "transactions", "asynchronous", "synchronous", "XA"]
repository = "https://github.com/emabee/rust-dist_tx"
documentation = "https://docs.rs/dist_tx/"

[dependencies]
async-trait = "0.1"
bitflags = "1.0"
byteorder = "1.3"
thiserror = "1.0"
log = "0.4"
