[package]
name = "dist_tx"
version = "0.5.0"
authors = ["emabee <meinolf.block@sap.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust language bindings for XA Distributed Transactions"
keywords = ["distributed", "transactions", "asynchronous", "synchronous", "XA"]
repository = "https://github.com/emabee/rust-dist_tx"
documentation = "https://docs.rs/dist_tx/"

## docs.rs-specific configuration
[package.metadata.docs.rs]
all-features = true

# To make use of this globally, do: 
#    export RUSTDOCFLAGS="--cfg docsrs" 
# before calling 
#    cargo +nightly doc --package hdbconnect_async --all-features --no-deps
# define the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
sync = []
async = ["dep:async-trait"]

[dependencies]
async-trait = { version = "0.1", optional = true }
bitflags = "2.4"
byteorder = "1.3"
thiserror = "1.0"
log = "0.4"
